# av_camera_trigger

./: .mergify.yaml  .pre-commit-config.yaml  Dockerfile  README.md  dev.sh  runtime.sh
av_camera_trigger/: CHANGELOG.rst  CMakeLists.txt  package.xml
av_camera_trigger/config/: cam_config.yaml
av_camera_trigger/include/av_camera_trigger/: Exceptions.hpp  camera_trigger_messaging.h  camera_trigger_messaging.hpp  camera_trigger_node.hpp  device_interface.hpp  hid_device_interface.hpp
av_camera_trigger/launch/: av_camera_trigger.launch.xml
av_camera_trigger/src/: camera_trigger_node.cpp  device_interface.cpp  hid_device_interface.cpp  main.cpp
camera_trigger_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
camera_trigger_msgs/msg/: Trigger.msg
